@@ -6,14 +6,7 @@ pipeline {
         AWS_REGION = 'ap-south-1'
         ECR_REPO = '777014042292.dkr.ecr.ap-south-1.amazonaws.com/java/spc'
         ARTIFACTORY_URL = 'https://trialtud4wx.jfrog.io/artifactory/javaspc-libs-release-local/com/myapp'
-       export MAVEN_OPTS="--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
-                        --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
-                        --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
-                        --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
-                        --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
-                        --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
-                        --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
-                        --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
+        MAVEN_OPTS = "--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
  
     }
 
